After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 132876 - Preview not interacting
Preview not interacting
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
git master
Other All
: Normal normal
: ---
Assigned To: Andreas J. Guelzow
Andreas J. Guelzow
: 143133 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2004-01-29 16:53 UTC by Morten Welinder
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Morten Welinder 2004-01-29 16:53:30 UTC
From gnumeric, select File->Print... and the click the preview button.
The preview comes up, but I cannot interact with it.  It looks like the
print dialog needs to be dismissed first.
Comment 1 Andreas J. Guelzow 2004-01-29 17:13:30 UTC
oh, bother. I broke that since people for asking for the print dialog
not to disappear on print preview (so they can try out a few.
Comment 2 Andreas J. Guelzow 2004-01-30 06:29:54 UTC
I think we should make the print dialog behave like a guru in that it
only blocks one gnumeric window rather than being modal. I'll have a
look at this this weekend.
Comment 3 Andreas J. Guelzow 2004-02-01 07:10:52 UTC
this is not a gnomeprint but a gnumeric bug
Comment 4 Andreas J. Guelzow 2004-05-25 16:04:01 UTC
*** Bug 143133 has been marked as a duplicate of this bug. ***
Comment 5 Andreas J. Guelzow 2004-10-19 18:24:09 UTC
Fixed in cvs head.