http://bugzilla.gnome.org/show_bug.cgi?id=132876 make the print dialog

2004-10-19  Andreas J. Guelzow <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=132876
	* src/print.c (sheet_print): make the print dialog semi-modal.
	(dialog_destroy): new
	(dialog_response): new
	(sheet_print_real): new